Operator permission management.

--- a/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -47,68 +47,70 @@
                         </li>
                     </ul>
                 </li> *@
-                <li is-active-route asp-area="Admin" class="nav-item has-treeview">
-                    <a is-active-route asp-area="Admin" class="nav-link">
-                        <i class="nav-icon fas fa fa-wrench"></i>
-                        <p>
-                            @localizer["Admin"]
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        @if (User.IsInRole("SuperAdmin"))
-                        {
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Admin" asp-controller="User" asp-action="index" class="nav-link">
-                                    <i class="far fa-user-circle nav-icon"></i>
-                                    <p>@localizer["Users"]</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Admin" asp-controller="Role" asp-action="index" class="nav-link">
-                                    <i class="far fa-user-circle nav-icon"></i>
-                                    <p>@localizer["Roles"]</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Admin" asp-controller="GenerateForm" asp-action="index" class="nav-link">
-                                    <i class="fa fa-wpforms nav-icon"></i>
-                                    <p>@localizer["Form Builder"]</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Admin" asp-controller="TemplateBuilder" asp-action="index" class="nav-link">
-                                    <i class="fa fa-file-archive-o" aria-hidden="true"></i>
-                                    <p>@localizer["Template Design"]</p>
-                                </a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Client" asp-controller="ManageClient"
-                                   asp-action="index" class="nav-link">
-                                    <i class="fa fa-user nav-icon" aria-hidden="true"></i>
-                                    <p>@localizer["Client"]</p>
-                                </a>
-                            </li>
-                            @*  <li class="nav-item">
+                @if (!User.IsInRole("Operator"))
+                {
+                    <li is-active-route asp-area="Admin" class="nav-item has-treeview">
+                        <a is-active-route asp-area="Admin" class="nav-link">
+                            <i class="nav-icon fas fa fa-wrench"></i>
+                            <p>
+                                @localizer["Admin"]
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            @if (User.IsInRole("SuperAdmin"))
+                            {
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Admin" asp-controller="User" asp-action="index" class="nav-link">
+                                        <i class="far fa-user-circle nav-icon"></i>
+                                        <p>@localizer["Users"]</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Admin" asp-controller="Role" asp-action="index" class="nav-link">
+                                        <i class="far fa-user-circle nav-icon"></i>
+                                        <p>@localizer["Roles"]</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Admin" asp-controller="GenerateForm" asp-action="index" class="nav-link">
+                                        <i class="fa fa-wpforms nav-icon"></i>
+                                        <p>@localizer["Form Builder"]</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Admin" asp-controller="TemplateBuilder" asp-action="index" class="nav-link">
+                                        <i class="fa fa-file-archive-o" aria-hidden="true"></i>
+                                        <p>@localizer["Template Design"]</p>
+                                    </a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Client" asp-controller="ManageClient"
+                                       asp-action="index" class="nav-link">
+                                        <i class="fa fa-user nav-icon" aria-hidden="true"></i>
+                                        <p>@localizer["Client"]</p>
+                                    </a>
+                                </li>
+                                @*  <li class="nav-item">
                                 <a is-active-route asp-area="LawyerDiary" asp-controller="Lawyer" asp-action="index" class="nav-link">
                                     <i class="fa fa-gavel" aria-hidden="true"></i>
                                     <p>@localizer["Lawyer"]</p>
                                 </a>
                             </li> *@
-                            <li class="nav-item">
-                                <a is-active-route asp-area="Admin" asp-controller="User" asp-action="index"
-                                   class="nav-link">
-                                    <i class="far fa-user-circle nav-icon"></i>
-                                    <p>@localizer["Operator"]</p>
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </li>
-
+                                <li class="nav-item">
+                                    <a is-active-route asp-area="Admin" asp-controller="User" asp-action="index"
+                                       class="nav-link">
+                                        <i class="far fa-user-circle nav-icon"></i>
+                                        <p>@localizer["Operator"]</p>
+                                    </a>
+                                </li>
+                            }
+                        </ul>
+                    </li>
+                }
                 <li is-active-route asp-area="Litigation" class="nav-item has-treeview">
                     <a is-active-route asp-area="Litigation" class="nav-link">
                         <i class="nav-icon fas fas fa-balance-scale"></i>
