--- a/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
@@ -1,47 +1,74 @@
 ﻿@using CourtApp.Web.Areas.Admin.Models
 @model UserViewModel
-<form id="create-form" method="post" asp-area="Admin" asp-controller="User" asp-action="OnPostCreate" onsubmit="return jQueryModalPost(this);">
+<form id="create-form" method="post" asp-area="Admin" asp-controller="User"
+      asp-action="OnPostCreate"
+      onsubmit="return jQueryModalPost(this);">
     <div class="row">
-        <div class="col-md-6">
-            <label class="col-md-3 col-form-label">@localizer["First Name"]</label>
-            <div class="col-md-9">
-                <input type="text" asp-for="FirstName" class="form-control">
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="form-group">
-                <label class="col-md-3 col-form-label">@localizer["Last Name"]</label>
-                <div class="col-md-9">
-                    <input type="text" asp-for="LastName"class="form-control">
+        <div class="col-md-12">
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["First Name"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <input type="text" asp-for="FirstName" class="form-control">
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <label class="col-md-2 col-form-label">@localizer["Last Name"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <input type="text" asp-for="LastName" class="form-control">
                     <span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="col-md-6">
-            <label class="col-md-3 col-form-label">@localizer["Email"]</label>
-            <div class="col-md-9">
-                <input type="email" asp-for="Email" name="Email" class="form-control">
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="form-group">
-                <label class="col-md-3 col-form-label">@localizer["Mobile"]</label>
-                <div class="col-md-9">
+        <div class="col-md-12">
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Email"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <input type="email" asp-for="Email" name="Email" class="form-control">
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <label class="col-md-2 col-form-label">@localizer["Mobile"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
                     <input type="text" asp-for="Mobile" name="Mobile" class="form-control">
                     <span asp-validation-for="Mobile" class="text-danger"></span>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Gender"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <select class="form-control select2bs4"
+                            asp-for="Gender" placeholder="Select Court Type">
+                        <option></option>
+                        <option value="M">Male</option>
+                        <option value="F">Female</option>
+                        <option value="O">Other</option>
 
-
+                    </select>
+                    <small><span asp-validation-for="Gender" class="text-danger"></span></small>
+                </div>
+                <label class="col-md-2 col-form-label">@localizer["Date Of Birth"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <input type="date" value="@DateTime.Now" asp-for="DateOfBirth" class="form-control">
+                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Joining Date"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <input type="date" value="@DateTime.Now" asp-for="DateOfJoining" class="form-control">
+                    <span asp-validation-for="DateOfJoining" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+    </div>
 
     @*<div class="form-group row">
         <label class="col-md-3 col-form-label">@localizer["Password"]</label>
