--- a/CourtApp.Web/Areas/Admin/Views/User/_Operator.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_Operator.cshtml
@@ -83,12 +83,12 @@
                             Action
                         </button>
                         <div class="dropdown-menu shadow animated--grow-in">
-                            <a style='margin-right:16px' asp-area="Admin" asp-page="/Profile" 
-                            asp-route-userId="@user.Id" class="dropdown-item">
-                                <i class="fas fa-user"></i> @localizer["Profile"]
-                            </a>
-                            <a style='margin-right:16px' asp-controller="UserRole" asp-action="Index" asp-route-userId="@user.Id" class="dropdown-item">
-                                <i class="fas fa-wrench"></i> @localizer["Manage Roles"]
+                            <a onclick="jQueryModalGet('/Admin/User/OnGetCreate?id=@user.Id','Edit Operator Detail')"
+                               class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
+                            <a style='margin-right:16px' asp-controller="Permission"
+                               asp-action="ManagePermissions" asp-route-operatorId="@user.Id.ToString()"
+                               class="dropdown-item">
+                                <i class="fas fa-wrench"></i> @localizer["Manage Permissions"]
                             </a>
                         </div>
                     </div>
