--- a/CourtApp.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CourtApp.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -88,7 +88,7 @@
                                                     <option value="O">Other</option>
 
                                                 </select>
-                                                <small><span asp-validation-for="Input.Address" class="text-danger"></span></small>
+                                                <small><span asp-validation-for="Input.Gender" class="text-danger"></span></small>
                                             </div>
                                             <div class="form-group row">
                                                 <div class="col-sm-6 mb-3 mb-sm-0">
