--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -6,7 +6,7 @@
     ViewData["Caption"] = localizer["Manage Case"];
     ViewData["Note"] = localizer["All (*) marked fields are mandatory! If client not exist in the dropdown or new client please add client first before moving next!"];
 }
-<style>    
+<style>
 
 
     .div_hide {
@@ -25,8 +25,10 @@
 @model CaseUpseartViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        <partial name="_StatusMessage" model="Model.StatusMessage" />                
-        <form id="create-form" method="post" asp-controller="CaseManage" asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id" enctype="multipart/form-data">
+        <partial name="_StatusMessage" model="Model.StatusMessage" />
+        <form id="frmCaseManage" method="post" asp-controller="CaseManage"
+              asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id" 
+              >
             <input type="hidden" asp-for="@Model.LCaseId" />
             <div class="row">
                 <div class="col-md-12">
@@ -303,9 +305,9 @@
 {
     <script src="~/js/litigation/managecase.js"></script>
     <script>
-        $(document).ready(function () {           
+        $(document).ready(function () {
             $("#hypButton").css("display", "block");
-            $("#hypRepeatButton").css("display", "block");            
+            $("#hypRepeatButton").css("display", "block");
             var showHighCourt = @((bool)ViewBag.ShowHighCourt ? "true" : "false");
             var AgIsHighCourt = @((bool)ViewBag.AgIsHighCourt ? "true" : "false");
             var CaseId = "@(ViewBag.Id)";
@@ -328,9 +330,9 @@
                     $('.AhighCourt').css('display', 'none');
                     $('.ACourt').css('display', 'block');
                 }
-            }            
+            }
             var frm = '@ViewBag.from';
-            if (frm == "repeat") { 
+            if (frm == "repeat") {
                 if (showHighCourt == true) {
                     $('.highCourt').css('display', 'block');
                     $('.Court').css('display', 'none');
