--- a/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
@@ -41,12 +41,8 @@
                 <label class="col-md-2 col-form-label">@localizer["Gender"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
                     <select class="form-control select2bs4"
-                            asp-for="Gender" placeholder="Select Court Type">
+                            asp-for="Gender" asp-items="@Model.Genders">
                         <option></option>
-                        <option value="M">Male</option>
-                        <option value="F">Female</option>
-                        <option value="O">Other</option>
-
                     </select>
                     <small><span asp-validation-for="Gender" class="text-danger"></span></small>
                 </div>
@@ -67,23 +63,19 @@
                     <span asp-validation-for="DateOfJoining" class="text-danger"></span>
                 </div>
             </div>
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["User Type"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <select class="form-control select2bs4"
+                            asp-for="RoleId" asp-items="@Model.Roles">
+                        <option></option>
+                    </select>
+                    <small><span asp-validation-for="RoleId" class="text-danger"></span></small>
+                </div>
+            </div>
         </div>
     </div>
-
-    @*<div class="form-group row">
-        <label class="col-md-3 col-form-label">@localizer["Password"]</label>
-        <div class="col-md-9">
-            <input type="password" asp-for="Password" name="Password" class="form-control">
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 col-form-label">@localizer["ConfirmPassword"]</label>
-        <div class="col-md-9">
-            <input type="password" asp-for="ConfirmPassword" name="ConfirmPassword" class="form-control">
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-    </div>*@
+    <div class="row" id="divPartial"></div>
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
@@ -91,4 +83,20 @@
 </form>
 <script type="text/javascript" language=javascript>
     $.validator.unobtrusive.parse(document);
+    $(document).ready(function () {
+        $("#Gender").select2({
+            placeholder: "Select a gender",
+            theme: "bootstrap4",
+            escapeMarkup: function (m) {
+                return m;
+            }
+        });
+         $("#RoleId").select2({
+            placeholder: "Select a role",
+            theme: "bootstrap4",
+            escapeMarkup: function (m) {
+                return m;
+            }
+        });
+    });
 </script>
