--- a/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -68,7 +68,7 @@
                                                 @localizer["Login"]
                                             </button>
                                             <hr>
-                                            <div class="row">
+                                            @* <div class="row">
                                                 <div class="col-lg-6">
                                                     <a class="btn btn-google btn-user btn-block">
                                                         <i class="fab fa-google fa-fw"></i> Login with Google
@@ -79,14 +79,16 @@
                                                         <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                                                     </a>
                                                 </div>
-                                            </div>
+                                            </div> *@
                                         </form>
-                                        <hr>
-                                        <div class="text-center">
-                                            <a asp-area="Identity" asp-page="/Account/forgotpassword" class="small">@localizer["Forgot Password?"]</a>
-                                        </div>
-                                        <div class="text-center">
-                                            <a asp-area="Identity" asp-page="/Account/register" class="small">@localizer["Create an Account!"]</a>
+                                        @*  <hr> *@
+                                        <div class="row">
+                                            <div class="text-center">
+                                                <a asp-area="Identity" asp-page="/Account/forgotpassword" class="small">@localizer["Forgot Password?"]</a>
+                                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <div class="text-center">
+                                                <a asp-area="Identity" asp-page="/Account/register" class="small">@localizer["Create an Account!"]</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -95,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
+            @* <div class="row justify-content-center">
                 <div class="col-xl-10 col-lg-12 col-md-9">
                     <div class="card">
                         <div class="card-header py-3">
@@ -112,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> *@
         </div>
     </div>
 
