--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
@@ -29,6 +29,6 @@
 </div>
 @section Scripts
 {
-    <script src="~/js/site.js"></script>
+  @*   <script src="~/js/site.js"></script> *@
     <script src="~/js/litigation/caselist.js"></script>
 }
