--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
@@ -21,10 +21,16 @@
                         <tbody>
                             @{
                                 int count = 0;
+                                string col = "";
                             }
                             @for (int i = 0; i < Model.CaseList.Count(); i++)
                             {
-                                <tr>
+                                @if (@Model.CaseList[i].IsProceedingDone)
+                                {
+                                    col = "green";
+                                }
+                                else col = "";
+                                <tr style="color:@col">
                                     <td style="width:5%">
                                         <input type="hidden" asp-for="@Model.CaseList[i].Id" />
                                         @(count = count + 1)
