Revert "update the todays hearing and some bugs"
This reverts commit 08810ee829bf3ec2402bb0cb1948e91d69f8f1d2.

--- a/CourtApp.Web/Areas/Admin/Views/User/_Operator.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_Operator.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CourtApp.Web.Areas.Admin.Models
-@model IEnumerable<UserViewModel>
+@model IEnumerable<OperatorViewModel>
 <table class="table table-striped" id="tblOperator">
     <thead>
         <tr>
@@ -41,7 +41,7 @@
                         }
                         <div class="col-sm">
                             <a>
-                                @user.FirstName @user.LastName
+                                @user.FullName
                             </a>
                             <br>
                             <small>
