--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<TitleGetViewModel>
-<table id="tblCaseTitle" class="table table-striped" width="100%" cellspacing="0">
+<table id="tblUserCase" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
             <th style="width:1%!important">Sno.</th>
@@ -76,6 +76,6 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#tblCaseTitle").DataTable();
+        $("#tblUserCase").DataTable();
     });
 </script>
