--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/Index.cshtml
@@ -24,7 +24,7 @@
     <script src="~/js/site.js"></script>
     <script>
         $(document).ready(function () {
-            // $("#tblUserCase").DataTable();
+            $("#tblUserCase").DataTable();
             loadData();
             $('#reload').on('click', function () {
                 loadData();
