--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ClientInfoDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ClientInfoDetail.cshtml
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    @* <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">Opposite Counsel</label>
@@ -95,9 +95,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
 
-    <fieldset class="scheduler-border">
+    @* <fieldset class="scheduler-border">
         <legend class="scheduler-border">Fee Information</legend>
         <div class="row">
             <div class="col-md-12">
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-    </fieldset>
+    </fieldset> *@
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">Save</button>
