--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
@@ -56,10 +56,10 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
-                <label class="col-md-2 col-form-label">@localizer["Email"] (<span style="color:red">*</span>)</label>
+                <label class="col-md-2 col-form-label">@localizer["Email"] @* (<span style="color:red">*</span>) *@</label>
                 <div class="col-md-4">
                     <input type="email" placeholder="Please enter email" asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    @* <span asp-validation-for="Email" class="text-danger"></span> *@
                 </div>
                 <label class="col-md-2 col-form-label">Office Email</label>
                 <div class="col-md-4">
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <div class="row">
+    @* <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Opposite Counsel"]</label>
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-    <fieldset class="scheduler-border">
+    @* <fieldset class="scheduler-border">
         <legend class="scheduler-border">Fee Information</legend>
         <div class="row">
             <div class="col-md-12">
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </div>
-    </fieldset>
+    </fieldset> *@
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         @{
@@ -148,13 +148,13 @@
 
 <script type="text/javascript" language=javascript>
      $.validator.unobtrusive.parse(document);
-    $("#OppositCounselId").select2({
-        placeholder: "Select a opposit councel",
-        theme: "bootstrap4",
-        escapeMarkup: function (m) {
-            return m;
-        }
-    });
+    // $("#OppositCounselId").select2({
+    //     placeholder: "Select a opposit councel",
+    //     theme: "bootstrap4",
+    //     escapeMarkup: function (m) {
+    //         return m;
+    //     }
+    // });
     $("#AppearenceID").select2({
         placeholder: "Select a appearance",
         theme: "bootstrap4",
