--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateCaseClient.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateCaseClient.cshtml
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <div class="row">
+    @* <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Opposite Counsel"]</label>
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <fieldset class="scheduler-border">
+    @* <fieldset class="scheduler-border">
         <legend class="scheduler-border">Fee Information</legend>
         <div class="row">
             <div class="col-md-12">
@@ -132,7 +132,7 @@
                 </div>
             </div>
         </div>
-    </fieldset>
+    </fieldset> *@
     @* <div class="row">
         <div class="col-md-12">
             <partial name="_StatusMessage" model="Model.StatusMessage" />
