--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_CaseProceeding.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_CaseProceeding.cshtml
@@ -19,7 +19,8 @@
 </style>
 
 @model CaseProceedingViewModel
-<form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostCaseProceeding" enctype="multipart/form-data">
+<form id="create-form" method="post" asp-controller="hearing"
+      asp-action="OnPostCaseProceeding" enctype="multipart/form-data">
     <div class="col-md-12">
         <div class="form-group row">
             <label class="col-md-2 col-form-label">@localizer["Proceeding Date"]</label>
@@ -148,7 +149,7 @@
                     </div>
                 </div>
             </fieldset>
-            
+
         </div>
 
         <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
